First packages version
Restructured directory
Lots more unit tests
Minor fixes

--- a/extension/SpecRunner.html
+++ b/extension/SpecRunner.html
@@ -14,7 +14,7 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src="src/swiss-cinema.v0.7.js"></script>
+  <script type="text/javascript" src="src/swiss-cinema.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/Spec.js"></script>
