--- a/extension/SpecRunner.html
+++ b/extension/SpecRunner.html
@@ -6,16 +6,21 @@
 
 	<link rel="shortcut icon" type="image/png" href="lib/jasmine-1.2.0/jasmine_favicon.png">
   	<link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
+
+	<!-- Jasmine libraries -->
   	<script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
 	<script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
 
-
 	<script type="text/javascript" src="spec/GM_functions.js"></script>
 
-	<!-- include source files here... -->
-	<script type="text/javascript" src="src/log4javascript.js"></script>
-	<script type="text/javascript" src="src/jquery-1.7.2.min.js"></script>
+	<!-- 3rd party libraries -->
+	<script type="text/javascript" src="lib/log4javascript.js"></script>
+	<script type="text/javascript" src="lib/jquery-1.7.2.min.js"></script>
+
+
+	<!-- scripts we are testing -->
 	<script type="text/javascript" src="src/swiss-cinema.js"></script>
+
 
 	<!-- include spec files here... -->
 	<script type="text/javascript" src="spec/Spec.js"></script>
